<resources>
    <string name="app_name">Chordinate</string>

    <string name="hello_world">Hello World!</string>

    <string name="load_screen">Loading</string>

    <string name="main_menu_title">Chordinate</string>
    <string name="main_menu_title_art">Chordinate Title Art</string>
    <string name="main_menu_subtitle">Create your own compositions!</string>
    <string name="main_about_btn_str">About</string>
    <string name="main_instr_btn_str">Instructions</string>
    <string name="main_settings_btn_str">Settings</string>
    <string name="main_keyboard_btn_str">Keyboard</string>
    <string name="main_record_btn_str">Record</string>
    <string name="main_comps_btn_str">Saved Compositions</string>

    <string name="about_version_text">Version 1.0</string>
    <string name="about_contact_help_email">chordinate.help@gmail.com</string>
    <string name="about_contact_title_text">Development Team</string>
    <string name="about_contact_team_name_1">Jacob Lundgren:</string>
    <string name="about_contact_team_name_2">Nicole Lewey:</string>
    <string name="about_contact_team_email_1">lund3481@pacificu.edu</string>
    <string name="about_contact_team_email_2">lewe4441@pacificu.edu</string>
    <string name="about_git_title">GitHub</string>
    <string name="about_git_url">https://github.com/NicLew/Chordinate</string>
    <string name="about_git_issues">Report bugs using GitHub Issues</string>
    <string name="about_license_title">The MIT License (MIT)</string>
    <string name="about_license_text">Copyright (c) 2015\n\nPermission is hereby granted, free
        of charge, to any person obtaining a copy of this software and associated documentation
        files (the "Software"), to deal in the Software without restriction, including without
        limitation the rights to use, copy, modify, merge, publish, distribute, sublicense,
        and/or sell copies of the Software, and to permit persons to whom the Software is
        furnished to do so, subject to the following conditions:\n\nThe above copyright notice
        and this permission notice shall be included in all copies or substantial portions of the
        Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
        PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS
        BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
        TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE
        OR OTHER DEALINGS IN THE SOFTWARE.</string>

    <string name="record_rec_button_rec">Record</string>
    <string name="record_rec_button_stop">Stop</string>
    <string name="record_playback_button_play"></string>
    <string name="record_save_button"></string>
    <string name="record_delete_button">DELETE</string>
    <string name="record_view_dialog_button">VIEW/\nEDIT</string>
    <string name="record_exit_dialog_button">Close</string>
    <string name="record_save_dialog_button">SAVE\nNAME</string>
    <string name="record_list_title">Saved Recordings</string>
    <string name="record_list_item_name_default">Name</string>
    <string name="record_list_item_date_default">Date</string>
    <string name="record_list_item_length_default">Length</string>

    <string name="saved_comp_title">Saved Compositions</string>
    <string name="comps_list_item_name_default">Name</string>
    <string name="comps_list_item_date_default">Date</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About Chordinate</string>
    <string name="title_activity_keyboard">KeyboardActivity</string>
    <string name="title_activity_keyboard_review">KeyboardReviewActivity</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="title_activity_compositions">CompositionsActivity</string>

    <string name="choose_comp_opts_title">Choose a key and scale</string>
    <string name="choose_comp_opts_done_btn">Done</string>
    <string name="choose_comp_opts_key">Choose a key:</string>
    <string name="choose_comp_opts_scale_type">Chose a scale:</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="change_speed_title">Change the speed of playback:</string>
    <string name="test_speed_btn_txt">TEST</string>

    <string name="title_activity_instructions">Instructions</string>
    <string name="instr_watch_video_title">Watch a demo video</string>
    <string name="instr_create_comp_title">Create a composition</string>
    <string name="instr_edit_comp_title">Edit a composition</string>
    <string name="instr_save_melody_title">Save a melody</string>
    <string name="instr_record_idea_title">Record an idea</string>
    <string name="instr_change_speed_title">Change the speed of playback</string>
    <string name="instr_report_bug_title">Report a bug</string>

    <string name="instr_watch_video_txt">https://youtu.be/DC6f5IB5Pxw</string>
    <string name="instr_report_bug_txt_1">Fill out a GitHub issue at </string>
    <string name="instr_report_bug_txt_2">https://github.com/NicLew/Chordinate/issues</string>
    <string name="instr_report_bug_txt_3">or email us at </string>
    <string name="instr_report_bug_txt_4">chordinate.help@gmail.com</string>
    <string name="instr_change_speed_txt">From the main menu, go to Settings. Use the slider to
        change the speed of playback. You can test how the new speed will sound by pressing the
        TEST button.</string>
    <string name="instr_record_idea_txt">From the main menu, go to Record. You can see your list
        of saved recordings. Press the RECORD button. When you have finished, press STOP. You
        may then play, save, or delete that recording. Once you have saved the recording, you
        may select it from the list to edit the name.</string>
    <string name="instr_save_melody_txt">From the main menu, go to Keyboard. Choose an octave
        and press RECORD. When you have finished, press STOP. This will take you to a review
        page. From here you can view the melody, redo the melody, or save the melody without
        creating a composition by pressing the SAVE MELODY button.</string>
    <string name="instr_edit_comp_txt">From the main menu, go to Saved Compositions. Select the
        composition you wish to edit from the list. Press VIEW/EDIT. Press EDIT MODE. Select the
        chord you wish to begin editing from. Select the key and scale type you want. Press DONE.
        Chordinate’s algorithm will run from that chord until the end of the composition. All
        changes are immediately and automatically saved. If you wish to undo a change, press the
        UNDO button. However, once you leave the page, all edits are final.</string>
    <string name="instr_create_comp_txt">From the main menu, go to Keyboard. Choose an octave and
        press RECORD. When you have finished, press STOP. This will take you to a review page.
        From here you can view the melody, redo the melody, or save the melody without creating a
        composition by pressing the SAVE MELODY button. Press the CHORDINATE button. You have
        successfully created and saved a composition! You can now view or edit this composition
        from the Saved Compositions page.</string>

</resources>
