<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollViewAbout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:scrollIndicators="right">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="edu.pacificu.chordinate.chordinate.AboutActivity"
        android:scrollIndicators="right">

        <TextView android:text="@string/about_version_text" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextViewVersion"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:focusable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/about_contact_title_text"
            android:id="@+id/TextViewContactTitle"
            android:layout_below="@+id/TextViewVersion"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_contact_team_name_1"
            android:id="@+id/textViewContactName1"
            android:layout_below="@+id/textViewHelpEmail"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_contact_team_name_2"
            android:id="@+id/textViewContactName2"
            android:layout_below="@+id/textViewContactEmail1"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/about_git_title"
            android:id="@+id/textViewGitTitle"
            android:layout_below="@+id/textViewContactEmail2"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_git_url"
            android:id="@+id/textViewGitUrl"
            android:layout_below="@+id/textViewGitTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:autoLink="web" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_contact_team_email_1"
            android:id="@+id/textViewContactEmail1"
            android:autoText="false"
            android:layout_below="@+id/textViewContactName1"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_contact_team_email_2"
            android:id="@+id/textViewContactEmail2"
            android:layout_below="@+id/textViewContactName2"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/about_license_title"
            android:id="@+id/textViewLicenseTitle"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/textViewGitIssues"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_license_text"
            android:id="@+id/textViewLicenseText"
            android:layout_below="@+id/textViewLicenseTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_git_issues"
            android:id="@+id/textViewGitIssues"
            android:layout_below="@+id/textViewGitUrl"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_contact_help_email"
            android:id="@+id/textViewHelpEmail"
            android:layout_below="@+id/TextViewContactTitle"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp" />

    </RelativeLayout>

</ScrollView>