<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView
        android:id="@+id/tvRecName"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/record_list_item_name_default"
        android:textSize="20sp"
        android:gravity="start"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvRecDate"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/record_list_item_date_default"
        android:textSize="15sp"
        android:layout_weight="1"
        android:gravity="end"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/tvRecLength"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/record_list_item_length_default"
        android:textSize="15sp"
        android:gravity="end"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="20dp" />
</LinearLayout>